<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/pro_selfie_circle" />

    <TextView
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:text="@string/happy_birthday"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:padding="0dp"
        android:text="@string/highlight"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="59dp"
        android:padding="0dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:padding="0dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="21dp"
        android:padding="0dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:text="@string/education"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-155dp"
        android:layout_marginTop="140dp"
        android:text="University of Massachusetts Lowell"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <TextView
        android:layout_width="351dp"
        android:layout_height="88dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="270dp"
        android:layout_marginTop="156dp"
        android:text="- Bachelor of Science in Computer Science\n
- gpa: 3.2 \n
- Minor in Psychology \n
- Relevant Courses: Computing I-IV, Computer Architecture\n"
        android:textColor="@color/black"
        android:textSize="14dp" />


    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:text="@string/skills"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="351dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="267dp"
        android:text="-Development: C, C++, Python, Java and familiar with HTML and simics \n-Platforms: Unix/Linux, Mac Terminal, Visual Studios, Xcode \n-Documentation: Microsoft Word, Microsoft Excel , Microsoft PowerPoint and IBM DOORS
"
        android:textColor="@color/black"
        android:textSize="14dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="240dp"
        android:text="@string/related_experience"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="17dp"
        android:text="Mutualink, Westford, MA									             May 2018-Aug 2018 \n
Engineering Intern \n
        •	Completed software test cases against many different \n
        platforms/hardware, such as window’s machines or ios \n
        •	Wrote python scripts to change configuration files of \n
        multiple different platforms/hardware devices all at once \n\n
Draper Laboratory, Cambridge, MA       						  Jan. 2017-July 2017 \n
Engineering Intern\n
        •	Read and wrote software documentation about testing\n
        newly developed software \n
        •	Wrote 30+ python/simics scripts to test software \n
        requirements

"
        android:textColor="@color/black"
        android:textSize="14dp" />


</RelativeLayout>